# chess-legality-probe

./: .gitignore  4-22-Update.md  FILEMAP.md  README.md  chess_gpt_mlp_probe.py  chess_gpt_probe.py  chess_probe.py  chess_probe_common.py  config_utils.py  download_model.py  generate_games.py  plot_comparison.py  plot_ply_analysis.py  plot_probe_distribution.py  pyproject.toml  test.py
configs/: generation.yaml  probe.yaml
data/: clamp_sweep_results.csv  direction_analysis.csv  per_fold_mlp_t1p3_n30000.csv  per_fold_neurons.csv  per_fold_t1p3_n30000.csv  quicktest.pt.json  stockfish16_t1p3_n30000.pt.json  stockfish16_t1p3_n30000_neurons.pt.json  top_neurons.csv
docs/updates/: 4-26-Update.md
neurons-extension/: README.md  _paths.py  analyze_legality_directions.py  chess_gpt_neuron_probe.py  chess_probe_common_neurons.py  clamp_neurons_experiment.py  generate_games_with_neurons.py  plot_neuron_results.py
neurons-extension/configs/: generation_neurons.yaml
