[project]
name = "chess-legality-probe"
version = "0.1.0"
description = "Layer-wise legality probes for Chess-GPT."
requires-python = ">=3.12"
dependencies = [
    "torch",
    "chess",
    "numpy",
    "tiktoken",
    "pyyaml",
]

[tool.uv]
package = false
torch-backend = "cu128"

[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cu128/torch-2.11.0%2Bcu128-cp313-cp313-win_amd64.whl" }