[project]
name = "chess-legality-probe"
version = "0.1.0"
description = "Layer-wise legality probes for Chess-GPT."
requires-python = ">=3.12"
dependencies = [
    "torch",
    "chess",
    "numpy",
    "tiktoken",
    "pyyaml",
    "matplotlib>=3.10.9",
    "scikit-learn>=1.8.0",
]

[tool.uv]
package = false
